# scout-mcp

./: .gitignore  README.md  proxy.py  pyproject.toml  ranker.py  schemas.py  server.py
.github/workflows/: test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/02-proxy-layer/: 02-01-SUMMARY.md  02-02-SUMMARY.md
.planning/phases/03-full-loop/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
.planning/phases/04-polish-and-ship/: 04-01-SUMMARY.md  04-02-SUMMARY.md
tests/: conftest.py  test_acquire.py  test_config.py  test_error_handling.py  test_proxy.py  test_ranker.py  test_scout_control.py  test_scout_find.py  test_server_proxy.py
