[project]
name = "scout-mcp"
version = "0.1.0"
description = "AI-powered dynamic MCP server discovery gateway"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.84.0",
    "fastmcp>=3.1.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "BLE",  # flake8-blind-except
]
ignore = [
    "E501",   # line-length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["server", "proxy", "ranker"]
